--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="conteudo"></div>
+    <h1>Consulta GIT</h1>
+    <h2 id="conteudo"></h2>
+    <p id="title"></p>
+
+    <br/><br/>
+    <h1 class="">Consulta CEP</h1>
+    <div class="container">
+        <div class="form-group"><label for="cep">cep</label><input type="text" class="form-control" maxlength="9" id="cep"><small></small></div>
+        <div class="form-group"><label for="logradouro">logradouro</label><input type="text" class="form-control" id="logradouro"><small></small></div>
+        <div class="form-group"><label for="bairro">bairro</label><input type="text" class="form-control" id="bairro"><small></small></div>
+        <div class="form-group"><label for="localidade">localidade</label><input type="text" class="form-control" id="localidade"><small></small></div>
+        <div class="form-group"><label for="uf">uf</label><input type="text" class="form-control" id="uf"><small></small></div>
+    </div> 
+
 </body>
 <script src="script.js"></script>
 </html>
